--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <body>
 
   <nav>
-    <span>ComputerVM</span>
+    <span>ComputerVM Hello to BerndVM 2 whatever</span>
     <a href="#">Home</a>
   </nav>
 
@@ -140,4 +140,5 @@
   </div>
 
 </body>
+
 </html>
