--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
 <body>
 
   <nav>
-    <span>ComputerVM Hello to BerndVM 2 whatever</span>
+    <span>ComputerVM</span>
     <a href="#">Home</a>
+	<a onclick="">Rules</a>
   </nav>
 
   <div class="card-container">
@@ -139,6 +140,14 @@
 
   </div>
 
+	<script>
+		function rules() {
+			alert("Rules: Don't try to bypass ComputerNet, otherwise, vanillacat will go after you. All the VMs are really bad, but the site will get better.")
+		}
+		
+	</script>
+	
 </body>
 
 </html>
+
