--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <nav>
     <span>ComputerVM</span>
     <a href="#">Home</a>
-	<a onclick="">Rules</a>
+	<a onclick="rules()">Rules</a>
   </nav>
 
   <div class="card-container">
@@ -150,4 +150,5 @@
 </body>
 
 </html>
+
 
