--- a/vm_page.html
+++ b/vm_page.html
@@ -98,6 +98,7 @@
   <nav>
     <span>ComputerVM</span>
     <a href="index.html">Home</a>
+	<a onclick="rules()">Rules</a>
   </nav>
   
 	<p align="center">
@@ -105,6 +106,14 @@
 			Your stupiroo browser doesn't support iFrame, GET OFF XP!
 		</iframe>
 	</p>
-
+	
+	<script>
+		function rules() {
+			alert("Rules: Don't try to bypass ComputerNet, otherwise, vanillacat will go after you. All the VMs are really bad, but the site will get better.")
+		}
+		
+	</script>
+	
 </body>
+
 </html>
