--- a/vm_page_w93.html
+++ b/vm_page_w93.html
@@ -102,7 +102,7 @@
   </nav>
   
 	<p align="center">
-		<iframe src="v2.windows93.net" width="800" height="600" sandbox="allow-scripts allow-forms allow-same-origin allow-presentation allow-modals" onload="warning()">
+		<iframe src="https://v2.windows93.net" width="800" height="600" sandbox="allow-scripts allow-forms allow-same-origin allow-presentation allow-modals" onload="warning()">
 			Your stupiroo browser doesn't support iFrame, GET OFF XP!
 		</iframe>
 	</p>
@@ -117,4 +117,5 @@
 		}
 	</script>
 </body>
+
 </html>
