--- a/vm_page_w93.html
+++ b/vm_page_w93.html
@@ -102,7 +102,7 @@
   </nav>
   
 	<p align="center">
-		<iframe src="https://v2.windows93.net" width="800" height="600" sandbox="allow-scripts allow-forms allow-same-origin allow-presentation allow-modals" onload="warning()">
+		<iframe src="https://v2.windows93.net" width="800" height="600" sandbox="allow-scripts allow-forms allow-same-origin allow-presentation allow-modals allow-top-navigation allow-popups allow-top-navigation-by-user-activation" onload="warning()">
 			Your stupiroo browser doesn't support iFrame, GET OFF XP!
 		</iframe>
 	</p>
@@ -119,3 +119,4 @@
 </body>
 
 </html>
+
