--- a/vm_page_w93.html
+++ b/vm_page_w93.html
@@ -102,7 +102,7 @@
   </nav>
   
 	<p align="center">
-		<iframe src="https://v2.windows93.net" width="800" height="600" onload="warning()">
+		<iframe src="https://v2.windows93.net" width="800" height="600">
 			Your stupiroo browser doesn't support iFrame, GET OFF XP!
 		</iframe>
 	</p>
@@ -119,5 +119,6 @@
 </body>
 
 </html>
+
 
 
