--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <div class="vm-preview">
         <img src="https://4kwallpapers.com/images/walls/thumbs_3t/13944.jpg">
       </div>
-      <div class="vm-title">VMUndefined (ANARCHY, Windows 93(v2), not in ComputerNet)</div>
+      <div class="vm-title">VMUndefined (ANARCHY, Windows 93, not in ComputerNet)</div>
     </a>
 
   </div>
@@ -157,6 +157,7 @@
 </body>
 
 </html>
+
 
 
 
