--- a/vm_page_w93.html
+++ b/vm_page_w93.html
@@ -113,12 +113,13 @@
 		}
 		
 		function warning() {
-			$alert({msg:"Welcome to VMUndefined! Lol, it's really just Windows 93 with our stamp.",center:!1,btnOk:"OK",title:"lol",animationOut:"none",icon:"https://i.imgur.com/zzz1KA1.png"})
+			alert("Welcome to VMUndefined! Lol, it's really just Windows 93 with our stamp.")
 		}
 	</script>
 </body>
 
 </html>
+
 
 
 
