--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
     <span>ComputerVM</span>
     <a href="#">Home</a>
 	<a onclick="rules()">Rules</a>
+	<a href="/wiki/">Wiki</a>
   </nav>
 
   <div class="card-container">
@@ -157,6 +158,7 @@
 </body>
 
 </html>
+
 
 
 
