--- a/vm_page_w93.html
+++ b/vm_page_w93.html
@@ -99,6 +99,7 @@
     <span>ComputerVM</span>
     <a href="index.html">Home</a>
 	<a onclick="rules()">Rules</a>
+	<a href="/wiki/">Wiki</a>
   </nav>
   
 	<p align="center">
@@ -119,6 +120,7 @@
 </body>
 
 </html>
+
 
 
 
