--- a/wiki/index.html
+++ b/wiki/index.html
@@ -20,7 +20,7 @@
 			<a href="/wiki/computervm">Random article</a><br>
 
 			<h3>Articles</h3>
-			<a href="/wiki/computervm">Example Article</a><br>
+			<a href="/wiki/computervm">ComputerVM</a><br>
 		  </div>
 
 		  <div id="content">
