--- a/wiki/computervm/index.html
+++ b/wiki/computervm/index.html
@@ -19,7 +19,7 @@
 			<a href="/wiki/">Main page</a><br>
 
 			<h3>Articles</h3>
-			<a href="/wiki/computervm">Example Article</a><br>
+			<a href="/wiki/computervm">ComputerVM</a><br>
 		  </div>
 
 		  <div id="content">
