--- a/wiki/computervm/index.html
+++ b/wiki/computervm/index.html
@@ -28,7 +28,7 @@
 
 			<table class="infobox">
 			  <tr><th colspan="2">ComputerVM</th></tr>
-			  <tr><td colspan="2"><img src="/images/computervm_preview.png"></td></tr>
+			  <tr><td colspan="2"><img src="/images/computervm_preview.png" class="computervm-article-img" alt=""></td></tr>
 			  <tr><td>Type</td><td>Parody page</td></tr>
 			  <tr><td>Created</td><td>Sunday, December 21, 2025(Most of the page :|)</td></tr>
 			</table>
