--- a/wiki/index.html
+++ b/wiki/index.html
@@ -21,6 +21,7 @@
 
 			<h3>Articles</h3>
 			<a href="/wiki/computervm">ComputerVM</a><br>
+			<a href="/wiki/rules">Rules(ComputerVM)</a><br>
 		  </div>
 
 		  <div id="content">
