--- a/wiki/computervm/index.html
+++ b/wiki/computervm/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>ComputerVM</title>
+		<title>ComputerVM - Computerpro Wiki</title>
 		<link rel="stylesheet" href="/wiki/css/wiki.css">
 		<link rel="icon" href="/computerpro.ico" type="image/x-icon">
 	</head>
@@ -20,6 +20,7 @@
 
 			<h3>Articles</h3>
 			<a href="/wiki/computervm">ComputerVM</a><br>
+			<a href="/wiki/rules">Rules(ComputerVM)</a><br>
 		  </div>
 
 		  <div id="content">
