--- a/wiki/rules/index.html
+++ b/wiki/rules/index.html
@@ -50,8 +50,8 @@
 			<p>
 			  1: Do not try to bypass ComputerNet. ComputerNet is there of a reason, l bozo, it's the infrastructure that gives the VMs internet access, it's also where we operate the web filters. If you try to bypass the ComputerNet, vanillacat will go after you. OH NO!<br>
 			  2: No harrasing or impersonating other users. If you are found impersonating a user, you will (not) be disconnected, and then (not) banned if necessary. Harrasing someone is an inmediate (unexistent) ban.<br>
-			  3: No DDoSing or Doxxing. Skill issue if you try to do these at ComputerVM :| 💀🙏🥀
-			  4: Respect the admins. Otherwise, you'll get banned instantly, and permanently 💀🙏🥀
+			  3: No DDoSing or Doxxing. Skill issue if you try to do these at ComputerVM :| 💀🙏🥀<br>
+			  4: Respect the admins. Otherwise, you'll get banned instantly, and permanently 💀🙏🥀<br>
 			  5: DO NOT BE A FORKY AND CONSTANTLY BE CLIKING THE RECYCLE BIN TO TRIGGER THE CIRNO PAYLOAD 💀🙏🥀
 			</p>
 
