--- a/wiki/computervm/index.html
+++ b/wiki/computervm/index.html
@@ -35,7 +35,7 @@
 			</table>
 
 			<p>
-			  The <strong>Computer Virtual Machine</strong> (also known as ComputerVM, Computer VM, or assholes) is an openass source project which permits(it doesn't) users to collaboratively control one or more virtual machines through an online web interface (not) using a turn-based queue system, typically for around ∞ seconds per person. The twist is that anyone can hop in and use any of the available virtual machines at any given moment, and do whatever they want, so long as they abide by the ComputerVM Rules.<br> 
+			  The <strong>Computer Virtual Machine</strong> (also known as ComputerVM, Computer VM, or assholes) is an openass source project which permits(it doesn't) users to collaboratively control one or more virtual machines through an online web interface (not) using a turn-based queue system, typically for around ∞ seconds per person. The twist is that anyone can hop in and use any of the available virtual machines at any given moment, and do whatever they want, so long as they abide by the <a href="/wiki/rules/">ComputerVM Rules.</a><br> 
 			  This site is a parody of <a href="https://computernewb.com/">Computernewb</a>(Hello, dartz!).
 			</p>
 
