--- a/wiki/computervm/index.html
+++ b/wiki/computervm/index.html
@@ -18,7 +18,7 @@
 			<h3>Navigation</h3>
 			<a href="/wiki/">Main page</a><br>
 
-			<h3>Articles</h3>
+			<h3>Main Articles</h3>
 			<a href="/wiki/computervm">ComputerVM</a><br>
 			<a href="/wiki/rules">Rules(ComputerVM)</a><br>
 		  </div>
