--- a/wiki/index.html
+++ b/wiki/index.html
@@ -19,7 +19,7 @@
 			<a href="/wiki/">Main page</a><br>
 			<a href="/wiki/computervm">Random article</a><br>
 
-			<h3>Articles</h3>
+			<h3>Main Articles</h3>
 			<a href="/wiki/computervm">ComputerVM</a><br>
 			<a href="/wiki/rules">Rules(ComputerVM)</a><br>
 		  </div>
@@ -35,6 +35,7 @@
 			<h2>Featured content</h2>
 			<ul>
 			  <li><a href="/wiki/computervm">ComputerVM</a></li>
+			  <li><a href="/wiki/rules">ComputerVM Rules</a></li>
 			</ul>
 
 			<h2>About</h2>
