--- a/wiki/rules/index.html
+++ b/wiki/rules/index.html
@@ -18,7 +18,7 @@
 			<h3>Navigation</h3>
 			<a href="/wiki/">Main page</a><br>
 
-			<h3>Articles</h3>
+			<h3>Main Articles</h3>
 			<a href="/wiki/computervm">ComputerVM</a><br>
 			<a href="/wiki/rules">Rules(ComputerVM)</a><br>
 		  </div>
@@ -52,7 +52,7 @@
 			  2: No harrasing or impersonating other users. If you are found impersonating a user, you will (not) be disconnected, and then (not) banned if necessary. Harrasing someone is an inmediate (unexistent) ban.<br>
 			  3: No DDoSing or Doxxing. Skill issue if you try to do these at ComputerVM :| 💀🙏🥀<br>
 			  4: Respect the admins. Otherwise, you'll get banned instantly, and permanently 💀🙏🥀<br>
-			  5: DO NOT BE A FORKY AND CONSTANTLY BE CLIKING THE RECYCLE BIN TO TRIGGER THE CIRNO PAYLOAD 💀🙏🥀
+			  5: DO NOT BE A NIMBIE AND CONSTANTLY BE CLIKING THE RECYCLE BIN TO TRIGGER THE CIRNO PAYLOAD 💀🙏🥀
 			</p>
 
 			<h2 id="consequences">What if I break these rules?</h2>
