--- a/wiki/nimbies/index.html
+++ b/wiki/nimbies/index.html
@@ -34,13 +34,13 @@
 			</table>
 
 			<p>
-				 A "Nimbie" is a nickname typically given to someone who maliciously causes destruction or otherwise renders the virtual machines unusable to annoy, intimidate and/or troll users of <a href="/wiki/computervm/">ComputerVM</a>
+				 A "Nimbie" is a nickname typically given to someone who maliciously causes destruction or otherwise renders the virtual machines unusable to annoy, intimidate and/or troll users of <a href="/wiki/computervm/">ComputerVM</a><br>
 
 				Although their name derives from literally the name "Forkie"(We copied you, CollabVM), which derives from the term "fork bomb" (and was the original definition of Forkie), they do not exclusively run forkbombs. A forkie/Nimbie may also run an executable which prevents anything from opening, deleting the registry, or other methods of blocking usability on the VM. Sometimes, through various ways. In the case of ComputerVM, a way to nimb a VM is to click the Recycle Bin to trigger the Cirno Payload.<br>
 
-				Not (not) too long ago, a vote to reset button was (not) added to (not) combat nimbies along with a customized task manager (and later a customized command prompt), which is mostly actually successful at defeating nearly every nimbie, although a nimbie will eventually figure out how to bypass it and break the VM again immediately afterwards.
+				Not (not) too long ago, a vote to reset button was (not) added to (not) combat nimbies along with a customized task manager (and later a customized command prompt), which is mostly actually successful at defeating nearly every nimbie, although a nimbie will eventually figure out how to bypass it and break the VM again immediately afterwards.<br>
 
-				Usually, their attempts will get foiled by either the protections in place or the ComputerNet web filter.
+				Usually, their attempts will get foiled by either the protections in place or the ComputerNet web filter.<br>
 
 				Nimbies were not only present on ComputerVM - they were or are also known to be present on the similar competitor website known as <a href="https://computernewb.com/collab-vm/">CollabVM</a>, and also others such as <a href>socket.computer</a>, wecan.hasthe.technology, the Virus Farm and the like. They are not even exclusive to any of those places either - they exist pretty much anywhere on any establishment with publicly accessible machines that anyone can use.
 			</p>
