--- a/wiki/nimbies/index.html
+++ b/wiki/nimbies/index.html
@@ -58,7 +58,7 @@
 				Most of nimbies or forkies exist because they are just users who want to test malware, or just have a laugh, or perhaps just to watch the world burn.
 			</p>
 
-			<h2 id="arethereconsequences">What if I break these rules?</h2>
+			<h2 id="arethereconsequences">Being a forkie breaks the rules?</h2>
 			<p>
 				It does not violate the rules, but you will get a good spanking in the booty.
 			</p>
