--- a/wiki/index.html
+++ b/wiki/index.html
@@ -22,6 +22,7 @@
 			<h3>Main Articles</h3>
 			<a href="/wiki/computervm">ComputerVM</a><br>
 			<a href="/wiki/rules">Rules(ComputerVM)</a><br>
+			<a href="/wiki/computervm_server/">VMServer OS</a><br>
 		  </div>
 
 		  <div id="content">
